--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,147 @@
-h1 {
-    color: red;
+/* Reset some default styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f0f0f0;
+}
+
+.digits.edition-in-progress {
+  animation: fadeInOut 1.5s infinite;
+  opacity: 0;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.clock-wrapper {
+  margin: 20px;
+  padding: 20px;
+  border-radius: 2%;
+  border: 5px solid #dedede;
+}
+
+.clock-container {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 5px solid #555555;
+  background-color: #1d1d1d;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.clock-display {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "LCD", monospace;
+  font-size: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 220px;
+  height: 120px;
+  border: 5px solid #9a9a9a;
+  background-color: #f0f0f0;
+}
+
+.clock-display.enlight {
+  background-color: #dfc68b;
+  color: #253c54;
+}
+
+#format-12-box {
+  position: absolute;
+  fill: "PM";
+  font-size: 15px;
+  bottom: 10px;
+  right: 10px;
+}
+
+.button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f0f0;
+  border-radius: 20%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+
+.button:active {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+  background-color: #555555;
+}
+
+.top-left {
+  top: 10px;
+  left: 10px;
+  border-bottom-right-radius: 0;
+  background-color: #542525;
+}
+
+.top-right {
+  top: 10px;
+  right: 10px;
+  background-color: #253c54;
+  border-bottom-left-radius: 0;
+}
+
+.bottom-left {
+  bottom: 10px;
+  left: 10px;
+  background-color: #495425;
+  border-top-right-radius: 0;
+}
+
+.bottom-right {
+  bottom: 10px;
+  right: 10px;
+  background-color: #253c54;
+  border-top-left-radius: 0;
+}
+
+.bottom-zone {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #f0f0f0;
+  border: 3px solid #9a9a9a;
+  font-size: 14px;
+}
+
+.format-button {
+  margin-top: 2px;
+  background-color: rgb(69, 84, 72);
+  color: white;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.format-button:hover {
+  background-color: rgb(59, 74, 62);
 }
