--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +13,14 @@ body {
   margin: 0 auto;
   padding: 20px;
   background-color: #f0f0f0;
+}
+
+#clocks {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .digits.edition-in-progress {
@@ -71,7 +78,7 @@ body {
   color: #253c54;
 }
 
-#format-12-box {
+.format-12-box {
   position: absolute;
   fill: "PM";
   font-size: 15px;
@@ -144,4 +151,37 @@ body {
 
 .format-button:hover {
   background-color: rgb(59, 74, 62);
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  /* width: 100%; */
+  gap: 10px;
+  background-color: #f2f2f2;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.1);
+}
+
+#create-clock-selection,
+#create-clock-button {
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+}
+
+#create-clock-button {
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+#create-clock-selection {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
 }
